Updating images and fixing header height on smaller screens.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -35,6 +35,7 @@ figure {
   color: $black;
   font-size: 1em;
   line-height: 1.4;
+  overflow: hidden;
 }
 
 .header,
